# capturePointcloud

./: CMakeLists.txt  DepthCamera.cpp  DepthCamera.h  capture.cpp  multicam.cpp  multicam.h  mutilThread.cpp  mutilcam.cpp  read_display.cpp  singleThread.cpp  test.cpp  tmp.cpp  usage.cpp
core/: DepthCamera.cpp  DepthCamera.h  example.hpp
